--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Privacy Policy</title>
+    <title>Privacy Policy for Electric Fields</title>
 </head>
 <body>
 <div class="privacy-policy">
@@ -33,17 +33,9 @@
         <p>By using our application, you consent to our web site privacy policy.</p>
     </section>
 
-    <section id="privacy-changes">
-        <h3>Changes to our Privacy Policy</h3>
-        <p>If we decide to change our privacy policy, we will post those changes on this page, send
-            an email notifying you of any changes, and/or update the Privacy Policy modification
-            date below.</p>
-    </section>
-
     <section id="privacy-contact-us">
         <h3>Contacting Us</h3>
-        <p>If there are any questions regarding this privacy policy you may contact us using the
-            information below.</p>
+        <p>If there are any questions regarding this privacy policy you may contact us using the information below.</p>
     </section>
 </div>
 </body>
