"Step 1: Fix the policy violation with your app"

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -5,11 +5,16 @@
 <body>
 <div class="privacy-policy">
 
-    <h1>Privacy Policy</h1>
+    <h1>Privacy Policy for Electric Fields</h1>
 
     <section id="privacy-information-we-collect">
         <h3>What information do we collect?</h3>
-        <p>We do not collect any information from you.</p>
+        <p>We do not collect any information from users.</p>
+    </section>
+
+    <section id="privacy-disclose-usage">
+        <h3>What information do we use?</h3>
+        <p>We do not use any user information.</p>
     </section>
 
     <section id="privacy-protection">
@@ -18,13 +23,18 @@
             system policies.</p>
     </section>
 
-    <section id="privacy-cookies">
-        <h3>Do we use cookies?</h3>
+    <section id="privacy-disclose-third-party">
+        <h3>Do we disclose any information to outside parties?</h3>
         <p>No.</p>
     </section>
 
-    <section id="privacy-disclose-third-party">
-        <h3>Do we disclose any information to outside parties?</h3>
+    <section id="privacy-disclose-share">
+        <h3>Do we share any user data?</h3>
+        <p>No.</p>
+    </section>
+
+    <section id="privacy-cookies">
+        <h3>Do we use cookies?</h3>
         <p>No.</p>
     </section>
 
